@@ -15,3 +15,12 @@ dependencies {
     testImplementation     'junit:junit:4.13'
     implementation 'com.google.code.gson:gson:2.8.8'
 }
+
+// https://stackoverflow.com/questions/55433883/how-to-enable-java-12-preview-features-with-gradle
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
+test {
+    jvmArgs(['--enable-preview'])
+}
